SOLVED OVERFLOW min-scale

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
 
 body {
   background-color: var(--white);
+  overflow-x: hidden;
 }
 
 main {
@@ -126,10 +127,6 @@ nav {
   top: 0;
   z-index: 1000;
   transition: right 0.2s ease-in-out;
-}
-
-.site {
-  overflow-x: hidden;
 }
 
 nav ul {
